--- a/templates/vsprojects/vs2013/grpc_unsecure.vcxproj.filters.template
+++ b/templates/vsprojects/vs2013/grpc_unsecure.vcxproj.filters.template
@@ -1,2 +1,2 @@
-<%namespace file="vcxproj.filters_defs.include" import="gen_project"/>\
-${gen_project('grpc_unsecure', libs, targets)}
+<%namespace file="vcxproj.filters_defs.include" import="gen_filters"/>\
+${gen_filters('grpc_unsecure', libs, targets)}
