--- a/templates/vsprojects/vs2013/Grpc.mak.template
+++ b/templates/vsprojects/vs2013/Grpc.mak.template
@@ -4,8 +4,8 @@
 <%def name="to_windows_path(path)">${path.replace('/','\\')}</%def>\
 <%
   allowed_dependencies = set(['gpr', 'grpc', 'gpr_test_util', 'grpc_test_util'])
-  allowed_targets = [ target for target in targets if set(target.deps).issubset(allowed_dependencies) ]
-  test_targets = [ target for target in allowed_targets if target.name.endswith('_test') ]
+  buildable_targets = [ target for target in targets if set(target.deps).issubset(allowed_dependencies) and all([src.endswith('.c') for src in target.src])]
+  test_targets = [ target for target in buildable_targets if target.name.endswith('_test') ]
 %>\
 # NMake file to build secondary gRPC targets on Windows.
 # Use grpc.sln to solution to build the gRPC libraries.
@@ -42,7 +42,7 @@ ${target.name} \
 
 	echo All tests ran.
 
-% for target in test_targets:
+% for target in buildable_targets:
 ${target.name}.exe: grpc_test_util
 	echo Building ${target.name}
 	cl.exe /c /I..\.. /I..\..\include /nologo /Z7 /W3 /WX- /sdl /D WIN32 /D _LIB /D _USE_32BIT_TIME_T /D _UNICODE /D UNICODE /EHsc /RTC1 /MDd /GS /fp:precise /Zc:wchar_t /Zc:forScope /Gd /TC /analyze- /Fo:$(OUT_DIR)\ \
