polishing of Grpc.mak

--- a/templates/vsprojects/vs2013/Grpc.mak.template
+++ b/templates/vsprojects/vs2013/Grpc.mak.template
@@ -12,6 +12,12 @@
 
 OUT_DIR=test_bin
 
+CC=cl.exe
+LINK=link.exe
+CFLAGS=/c /I..\.. /I..\..\include /nologo /Z7 /W3 /WX- /sdl /D WIN32 /D _LIB /D _USE_32BIT_TIME_T /D _UNICODE /D UNICODE /EHsc /RTC1 /MDd /GS /fp:precise /Zc:wchar_t /Zc:forScope /Gd /TC /analyze-
+LFLAGS=/DEBUG /INCREMENTAL /NOLOGO /SUBSYSTEM:CONSOLE /TLBID:1 /DYNAMICBASE /NXCOMPAT /MACHINE:X86
+LIBS=
+
 gpr_test_util:
 	MSBuild.exe gpr_test_util.vcxproj /p:Configuration=Debug
 
@@ -45,19 +51,19 @@ ${target.name} \
 % for target in buildable_targets:
 ${target.name}.exe: grpc_test_util
 	echo Building ${target.name}
-	cl.exe /c /I..\.. /I..\..\include /nologo /Z7 /W3 /WX- /sdl /D WIN32 /D _LIB /D _USE_32BIT_TIME_T /D _UNICODE /D UNICODE /EHsc /RTC1 /MDd /GS /fp:precise /Zc:wchar_t /Zc:forScope /Gd /TC /analyze- /Fo:$(OUT_DIR)\ \
+	$(CC) $(CFLAGS) /Fo:$(OUT_DIR)\ \
 %for source in target.src:
 ..\..\${to_windows_path(source)} \
 %endfor
 
-	link.exe /DEBUG /OUT:"$(OUT_DIR)\${target.name}.exe" /INCREMENTAL /NOLOGO /SUBSYSTEM:CONSOLE /TLBID:1 /DYNAMICBASE /NXCOMPAT /MACHINE:X86 \
+	$(LINK) $(LFLAGS) /OUT:"$(OUT_DIR)\${target.name}.exe" \
 %for dep in target.deps:
 Debug\${dep}.lib \
 %endfor
+$(LIBS) \
 %for source in target.src:
 $(OUT_DIR)\${re.search('([^/]+)\.c$', source).group(1)}.obj \
 %endfor
-
 
 ${target.name}: ${target.name}.exe
 	echo Running ${target.name}
