Drop an erroneous trailing backslash.

--- a/tools/dockerfile/grpc_python_base/Dockerfile
+++ b/tools/dockerfile/grpc_python_base/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y \
     python-all-dev \
     python3-all-dev \
     python-pip \
-    python-virtualenv \
+    python-virtualenv
 
 # Install Python packages from PyPI
 RUN pip install futures==2.2.0 enum34==1.0.4 protobuf==3.0.0-alpha-1
