Adds dependency on GRPCClient to Sample app

--- a/src/objective-c/examples/Sample/Podfile
+++ b/src/objective-c/examples/Sample/Podfile
@@ -2,6 +2,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 
 pod 'RxLibrary', :path => "../../RxLibrary"
+pod 'GRPCClient', :path => "../../GRPCClient"
 
 target 'Sample' do
 
