--- a/src/csharp/MathClient/MathClient.csproj
+++ b/src/csharp/MathClient/MathClient.csproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{61ECB8EE-0C96-4F8E-B187-8E4D227417C0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>GrpcDemo</RootNamespace>
-    <AssemblyName>GrpcDemo</AssemblyName>
+    <RootNamespace>MathClient</RootNamespace>
+    <AssemblyName>MathClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -40,13 +40,13 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\GrpcApi\GrpcApi.csproj">
-      <Project>{7DC1433E-3225-42C7-B7EA-546D56E27A4B}</Project>
-      <Name>GrpcApi</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\GrpcCore\GrpcCore.csproj">
+    <ProjectReference Include="..\Grpc.Core\Grpc.Core.csproj">
       <Project>{CCC4440E-49F7-4790-B0AF-FEABB0837AE7}</Project>
-      <Name>GrpcCore</Name>
+      <Name>Grpc.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Grpc.Api\Grpc.Api.csproj">
+      <Project>{7DC1433E-3225-42C7-B7EA-546D56E27A4B}</Project>
+      <Name>Grpc.Api</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
