Also check build=test

--- a/templates/tools/run_tests/tests.json.template
+++ b/templates/tools/run_tests/tests.json.template
@@ -4,6 +4,6 @@ import json
 
 ${json.dumps([{"name": tgt.name, "language": tgt.language}
               for tgt in targets
-              if tgt.get('run', True)],
+              if tgt.get('run', True) and tgt.build == 'test'],
              sort_keys=True, indent=2)}
 
