--- a/tools/dockerfile/grpc_node/Dockerfile
+++ b/tools/dockerfile/grpc_node/Dockerfile
@@ -1,13 +1,16 @@
 # Dockerfile for gRPC Node
 FROM grpc/node_base
 
-# Update the C libary
+# Pull the latest sources
 RUN cd /var/local/git/grpc \
   && git pull --recurse-submodules \
   && git submodule update --init --recursive
 
+# Prevent breaking the build if header files are added/removed.
+RUN make clean -C /var/local/git/grpc
+
 # Install the C core.
-RUN make install_c -C /var/local/git/grpc
+RUN make install_c -j12 -C /var/local/git/grpc
 
 RUN cd /var/local/git/grpc/src/node && npm install && node-gyp rebuild
 
