Forgot to commit some files

--- a/tools/dockerfile/grpc_node_base/Dockerfile
+++ b/tools/dockerfile/grpc_node_base/Dockerfile
@@ -15,6 +15,8 @@ RUN cd /var/local/git/grpc && \
   git pull --recurse-submodules && \
   git submodule update --init --recursive
 
+# TODO: pre-building seems unnecessary, because we need to run make clean
+# anyway to prevent build from crashing if header files are added/removed.
 # Build the C core
 RUN make static_c shared_c -j12 -C /var/local/git/grpc
 
