Let's not install our potentially broken version of protobuf onto the system and pollute people's environment.

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -714,7 +714,7 @@ $(OBJDIR)/$(CONFIG)/%.o : %.cc
 	$(Q) $(CXX) $(CXXFLAGS) $(CPPFLAGS) -MMD -MF $(addsuffix .dep, $(basename $@)) -c -o $@ $<
 
 
-install: install_c install_cxx install-protobuf install-plugins
+install: install_c install_cxx install-plugins
 
 install_c: install-headers_c install-static_c install-shared_c
 
@@ -789,17 +789,6 @@ ${install_shared("c++")}
 
 install-shared_csharp: shared_csharp strip-shared_csharp
 ${install_shared("csharp")}
-
-install-protobuf: $(PROTOBUF_DEP)
-ifneq ($(PROTOBUF_DEP),)
-	$(E) "[INSTALL] Installing embedded protobufs"
-	$(Q) $(MAKE) -C third_party/protobuf install prefix=$(prefix)
-ifneq ($(SYSTEM),MINGW32)
-ifneq ($(SYSTEM),Darwin)
-	$(Q) ldconfig || true
-endif
-endif
-endif
 
 install-plugins: $(PROTOC_PLUGINS)
 ifeq ($(SYSTEM),MINGW32)
